# ExperimentalSelfPlayChessEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  GIT_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/arena/: student_vs_best_dense.json  student_vs_teacher.json  tiny_arena.json
configs/model/: dense_transformer_tiny.yaml  moe_transformer_tiny.yaml  student_dense_small.yaml  student_hybrid_tiny.yaml  tiny.yaml  tiny_inference.yaml
configs/openings/: diverse_openings.fen
configs/profiles/: hardware.json  quality.json
configs/selfplay/: bootstrap_material.json  bootstrap_pesto.json  gpu_selfplay_phase13.yaml  neural_tensorrt.json  tiny_gumbel_selfplay.yaml  tiny_selfplay.yaml
configs/training/: dense_bootstrap.json  dense_teacher_bootstrap.json  dense_transformer_tiny.json  dense_transformer_tiny_ddp.json  distill_student_dense.json  distill_student_hybrid.json  moe_transformer_tiny_ddp.json  reanalysis_phase14.json  tiny_replay.json
cpp/chess/: CMakeLists.txt
cpp/chess/include/chessmoe/chess/: bitboard.h  board.h  fen.h  move.h  move_generator.h  perft.h  position.h  types.h  zobrist.h
cpp/chess/src/: bitboard.cpp  board.cpp  fen.cpp  move.cpp  move_generator.cpp  perft.cpp  position.cpp  types.cpp  zobrist.cpp
cpp/eval/: CMakeLists.txt
cpp/eval/include/chessmoe/eval/: evaluator.h  material_evaluator.h  material_policy_evaluator.h  pesto_evaluator.h  random_evaluator.h
cpp/eval/src/: evaluator.cpp  material_evaluator.cpp  material_policy_evaluator.cpp  pesto_evaluator.cpp  random_evaluator.cpp
cpp/inference/: CMakeLists.txt
cpp/inference/include/chessmoe/inference/: async_batching_evaluator.h  backend_kind.h  tensor_layout.h  tensorrt_engine.h  tensorrt_evaluator.h
cpp/inference/src/: async_batching_evaluator.cpp  tensor_layout.cpp  tensorrt_engine.cpp  tensorrt_evaluator.cpp
cpp/search/: CMakeLists.txt
cpp/search/include/chessmoe/search/: alphabeta_searcher.h  gumbel_searcher.h  mcts_searcher.h  search_mode.h  simple_searcher.h
cpp/search/src/: alphabeta_searcher.cpp  gumbel_searcher.cpp  mcts_searcher.cpp  simple_searcher.cpp
cpp/selfplay/: CMakeLists.txt
cpp/selfplay/include/chessmoe/selfplay/: arena_config.h  config_resolver.h  game_worker.h  generation_controller.h  gpu_selfplay_pipeline.h  hardware_probe.h  hardware_profiles.h  quality_profiles.h  reanalysis_config.h  replay_health.h  replay_writer.h  self_play_generator.h  selfplay_app.h
cpp/selfplay/src/: arena_config.cpp  config_resolver.cpp  game_worker.cpp  generation_controller.cpp  gpu_selfplay_pipeline.cpp  hardware_probe.cpp  hardware_profiles.cpp  quality_profiles.cpp  reanalysis_config.cpp  replay_health.cpp  replay_writer.cpp  self_play_generator.cpp  selfplay_app.cpp  selfplay_main.cpp
cpp/uci/: CMakeLists.txt  main.cpp
cpp/uci/include/chessmoe/uci/: engine_state.h  uci_engine.h  uci_loop.h
cpp/uci/src/: engine_state.cpp  uci_engine.cpp  uci_loop.cpp
cuda/batching/: CMakeLists.txt
cuda/batching/include/chessmoe/cuda/batching/: batch_planner.h  cuda_stream.h
cuda/batching/src/: batch_planner.cpp  cuda_stream.cpp
data/openings/: bootstrap_fens.txt
data/test_positions/: golden.json  perft.epd
docs/: generation_pipeline.md  phase10_cuda_tensorrt_inference.md  phase11_dense_transformer_evaluator.md  phase12_gumbel_training_search.md  phase13_gpu_selfplay_pipeline.md  phase14_replay_reanalysis.md  phase15_moe_transformer.md  phase18_architecture_upgrade.md  phase8_training_loop.md  phase9_arena_gating.md  replay_chunk_format.md
python/chessmoe/: __init__.py
python/chessmoe/analysis/: __init__.py  arena.py  calibration.py  diagnostics.py  neural_arena.py  replay_buffer.py  sprt.py
python/chessmoe/export/: __init__.py  moe_export.py  onnx_export.py  student_export.py
python/chessmoe/models/: __init__.py  dense_transformer.py  encoding.py  factory.py  moe_module.py  moe_transformer.py  registry.py  student_hybrid.py  tiny_model.py
python/chessmoe/pipeline/: __init__.py  config.py  report.py  runner.py
python/chessmoe/training/: __init__.py  checkpoint.py  config.py  data.py  distill.py  (+8 more)
python/export/: build_tensorrt_engine.py  export_tiny_onnx.py
python/replay/: __init__.py  index.py  reader.py  reanalysis.py
python/training/: run_distributed_training.py
tests/cpp/chess/: CMakeLists.txt  test_bitboard.cpp  test_chess_core.cpp
tests/cpp/eval/: CMakeLists.txt  test_eval_interface.cpp  test_pesto_evaluator.cpp
tests/cpp/search/: CMakeLists.txt  test_alphabeta.cpp  test_gumbel_search.cpp  test_mcts.cpp
tests/cpp/selfplay/: CMakeLists.txt  test_arena_config.cpp  test_gpu_selfplay_pipeline.cpp  test_reanalysis_config.cpp  test_replay_writer.cpp  test_selfplay.cpp  test_selfplay_app.cpp
tests/python/: conftest.py  test_arena_gating.py  test_calibration.py  test_cpp_python_compatibility.py  test_dashboard.py  test_dense_transformer_evaluator.py  test_dense_transformer_training.py  test_distillation_arena_metadata.py  test_distillation_checkpoint.py  test_distillation_losses.py  test_distillation_targets.py  test_distributed_training.py  test_golden_positions.py  test_hardware_profiles.py  test_model_registry.py  test_moe_module.py  test_moe_transformer.py  test_neural_arena.py  test_phase10_inference_export.py  test_pipeline_cli.py  test_pipeline_tools.py  test_reanalysis.py  test_replay_buffer.py  test_replay_chunk.py  test_run_tracking.py  test_sprt.py  test_student_export.py  test_teacher_targets.py  test_tiny_neural_evaluator.py  test_training_loop.py
tools/: chessmoe.py  clean.py  run_pipeline.py
tools/benchmark/: CMakeLists.txt  benchmark_inference.py  benchmark_models.py  benchmark_reanalysis.py  benchmark_student_tradeoff.py  benchmark_training_throughput.py  gpu_selfplay_benchmark.cpp  moe_inference_benchmark.py
tools/compat/: CMakeLists.txt  main.cpp
tools/convert/: index_replay_dir.py  reanalyze_replay.py  summarize_replay.py  validate_replay.py
tools/perft/: CMakeLists.txt  main.cpp
tools/teacher/: generate_teacher_targets.py  label_with_stockfish.py  opening_book.py  train_teacher_distributed.py
(+4 files in other folders)
