[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chessmoe"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["chessmoe*"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests/python"]
